Anticipate URL constructor deprecation